erro de speed corrigido

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameActivity"
-            android:screenOrientation="unspecified"
+        <activity
+            android:screenOrientation="fullSensor"
+            android:name=".GameActivity"
             android:theme="@style/AppTheme.noActionBar">
 
         </activity>
